--- a/secondrayclassroom.html
+++ b/secondrayclassroom.html
@@ -31,7 +31,7 @@
                         src="https://www.ketteringschools.org/docs/_full_/building/3/screen%20shot%202017-07-17%20at%2010.22.12%20pm.png?id=551933&thumbwidth=360&fullwidth=500"
                         alt="card-image">
                     <div class="card-body">
-                        <h3 class="card-title"><i><a href="https://www.google.com/">Grade 6</a></i></h3>
+                        <h3 class="card-title"><i><a href="https://amarveer-banwait.github.io/virtual_classroom/">Grade 6</a></i></h3>
                     </div>
                 </div>
             </div>
@@ -41,7 +41,7 @@
                         src="http://p4cdn4static.sharpschool.com/UserFiles/Servers/Server_1450897/Image/common-core-caf-april-2014-1EPHYY-clipart.png"
                         alt="card-image">
                     <div class="card-body">
-                        <h3 class="card-title"><i><a href="https://www.google.com/">Grade 7</a></i></h3>
+                        <h3 class="card-title"><i><a href="https://amarveer-banwait.github.io/virtual_classroom/">Grade 7</a></i></h3>
                     </div>
                 </div>
             </div>
@@ -53,7 +53,7 @@
                         src="https://3.files.edl.io/77e7/19/11/26/165400-913a078a-219b-4aed-a6ef-1c0e257e5c95.jpg"
                         alt="card-image">
                     <div class="card-body">
-                        <h3 class="card-title"><i><a href="https://www.google.com/"> Grade 8 </a></i></h3>
+                        <h3 class="card-title"><i><a href="https://amarveer-banwait.github.io/virtual_classroom/"> Grade 8 </a></i></h3>
                     </div>
                 </div>
             </div>
